<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">KMM Survey</string>

    <string name="completion_thanks_message">Thanks for taking the survey.</string>

    <string name="generic_error">Unexpected error!</string>
    <string name="generic_no">No</string>
    <string name="generic_ok">OK</string>
    <string name="generic_yes">Yes</string>

    <string name="home_logout">Logout</string>
    <string name="home_today">Today</string>

    <string name="login_button">Log in</string>
    <string name="login_email">Email</string>
    <string name="login_forgot">Forgot?</string>
    <string name="login_password">Password</string>

    <string name="nps_extremely_likely">Extremely Likely</string>
    <string name="nps_not_at_all_likely">Not at all Likely</string>

    <string name="survey_start">Start Survey</string>
    <string name="survey_submit">Submit</string>
    <string name="survey_quit_confirmation_description">Are you sure you want to quit the survey?</string>
    <string name="survey_quit_confirmation_title">Warning</string>
</resources>
