...
import vn.luongvo.kmm.survey.android.ui.preview.SurveyDetailParameterProvider
import vn.luongvo.kmm.survey.android.ui.screens.survey.AnswerUiModel
import vn.luongvo.kmm.survey.android.ui.theme.AppTheme.dimensions
import vn.luongvo.kmm.survey.android.ui.theme.AppTheme.typography
import vn.luongvo.kmm.survey.domain.model.AnswerSubmission

private const val EMOJI_STAR = "⭐️️"
private const val EMOJI_HEART = "❤️"
private const val EMOJI_RED_ANGRY_FACE = "\uD83D\uDE21" // 😡
private const val EMOJI_CONFUSED_FACE = "\uD83D\uDE15" // 😕
private const val EMOJI_NEUTRAL_FACE = "\uD83D\uDE10" // 😐
private const val EMOJI_SLIGHTLY_SMILING_FACE = "\uD83D\uDE42" // 🙂
private const val EMOJI_GRINNING_FACE_WITH_SMILING_EYES = "\uD83D\uDE04" // 😄

...
